# glad

./: CMakeLists.txt  LICENSE  README.md
include/glad/: egl.h  gl.h  glad.h  gles2.h  glx.h  vulkan.h  wgl.h
src/: glad.c
