CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

# In-source Builds Are Not Allowed
if(" ${CMAKE_SOURCE_DIR}" STREQUAL " ${CMAKE_BINARY_DIR}")
  message(
    FATAL_ERROR
      "FATAL: \nIn-source builds are not allowed.\nYou should create a separate directory for build files."
  )
endif()

PROJECT(GLAD)

IF (${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_SOURCE_DIR})
  SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
  SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
  SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
ENDIF ()

OPTION(GLAD_BUILD_STATIC_LIBS "build static lib" ON)
OPTION(GLAD_BUILD_SHARED_LIBS "build shared lib" ON)

IF (GLAD_BUILD_STATIC_LIBS)
  ADD_LIBRARY(GLAD_STATIC STATIC)
  TARGET_SOURCES(GLAD_STATIC
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include/glad/glad.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/KHR/khrplatform.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/glad.c
  )
  TARGET_INCLUDE_DIRECTORIES(GLAD_STATIC PUBLIC include)
ENDIF ()

IF (GLAD_BUILD_SHARED_LIBS)
  ADD_LIBRARY(GLAD_SHARED SHARED)
  TARGET_SOURCES(GLAD_SHARED
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include/glad/glad.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/KHR/khrplatform.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/glad.c
  )
  TARGET_INCLUDE_DIRECTORIES(GLAD_SHARED PUBLIC include)
ENDIF ()
