CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

IF (${CMAKE_CURRENT_SOURCE_DIR} STREQUAL ${CMAKE_SOURCE_DIR})
  MESSAGE(FATAL_ERROR "No Target To Build. Use This As A Submodule Of Your Project!")
ENDIF()

PROJECT(GLAD)

ADD_LIBRARY(GLAD INTERFACE)

TARGET_INCLUDE_DIRECTORIES(GLAD
INTERFACE
  ${CMAKE_CURRENT_SOURCE_DIR}/include
)

TARGET_SOURCES(GLAD
INTERFACE
  ${CMAKE_CURRENT_SOURCE_DIR}/include/glad/vulkan.h
  ${CMAKE_CURRENT_SOURCE_DIR}/include/glad/gl.h
  ${CMAKE_CURRENT_SOURCE_DIR}/include/glad/gles2.h
  ${CMAKE_CURRENT_SOURCE_DIR}/include/glad/egl.h
  ${CMAKE_CURRENT_SOURCE_DIR}/include/glad/glx.h
  ${CMAKE_CURRENT_SOURCE_DIR}/include/glad/wgl.h
)
